--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <td class="date">2019</td>
         <td class="announcement">
 
-            Ghosh, Susmita, Devanand, T., Upayan Baul, and Satyavani Vemparala. "Aggregation dynamics of charged peptides in water: Effect of salt concentration." The Journal of chemical physics 151, no. 7 (2019): 074901.
+            Susmita Ghosh, Devanand, T., Upayan Baul, and Satyavani Vemparala. "Aggregation dynamics of charged peptides in water: Effect of salt concentration." The Journal of chemical physics 151, no. 7 (2019): 074901.
 
 
         </td>
