--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 
 
 <!-- Include custom icon fonts -->
-<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-<link rel="stylesheet" href="assets/css/academicons.min.css">
+<!-- <link rel="stylesheet" href="assets/css/font-awesome.min.css"> -->
+<!-- <link rel="stylesheet" href="assets/css/academicons.min.css"> -->
 
 <!-- Google Analytics -->
 <script>
