--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 <!-- Include custom icon fonts -->
 <!-- <link rel="stylesheet" href="assets/css/font-awesome.min.css"> -->
 <link rel="stylesheet" href="assets/fonts/additional.css">
-<link rel="stylesheet" href="assets/css/academicons.min.css">
+<!-- <link rel="stylesheet" href="assets/css/academicons.min.css"> -->
 
 <!-- Google Analytics -->
 <script>
