--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <a href="mailto:devanand.t.1986@gmail.com"><i class="fa fa-envelope-square"></i></a>
     <a href="https://scholar.google.co.in/citations?hl=en&user=w0dMQy4AAAAJ&view_op=list_works&sortby=pubdate" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a>
     <a href="https://github.com/dexterdev" target="_blank" title="GitHub"><i class="fa fa-github-square"></i></a>
-    <a href="https://twitter.com/devanand_t" target="_blank" title="Twitter" class="contact-icon"><i class="fa fa-twitter-square"></i></a>
+    <!--<a href="https://twitter.com/devanand_t" target="_blank" title="Twitter" class="contact-icon"><i class="fa fa-twitter-square"></i></a>-->
   </span>
 
   <div class="col three caption">
