--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Devanand Thanissery</title>
+  <title>Jayakrishnan Madathil</title>
   <meta name="description" content="">
 
   <link rel="shortcut icon" href="assets/img/favicon.ico">
