--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
 
 
-<p>I am a theoretical computer scientist. I work primarily in algorithm design. My research interests include parameterized algorithms, kernelization, approximate counting. Recently, I have strated working on problems at the intersection of economics and computation as well.</p>
+<p>I am a theoretical computer scientist. I work primarily in algorithm design. My research interests include parameterized algorithms, kernelization, approximate counting etc. Recently, I have strated working on problems at the intersection of economics and computation.</p>
   
 <p> I am currently a postdoctoral researcher in the School of Computing Science at the University of Glasgow, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by Kitty Meeks. Before moving to Glasgow, I was a postdoc at the Chennai Mathematical Instritute, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at The Institute of Mathematical Sciences (IMSc), Chennai.</p> 
 
@@ -133,14 +133,11 @@
 </div>
   
 
-    
+<!--    
     <div class="news" id="talks">
   <h2>Talks</h2>
 
 
-<!--        <p></p>
-    <h4>Seminar Talks</h4>
-        <p></p> -->
 
     <table>
 
@@ -190,7 +187,7 @@
   
 </div>
 
-  
+  -->
 
 <!--
   
