--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <p>I am a theoretical computer scientist. I work primarily in algorithm design. My research interests include parameterized algorithms, kernelization, approximate counting etc. Recently, I have strated working on problems at the intersection of economics and computation.</p>
   
-<p> I am currently a postdoctoral researcher in the School of Computing Science at the University of Glasgow, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by Kitty Meeks. Before moving to Glasgow, I was a postdoc at the Chennai Mathematical Instritute, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at The Institute of Mathematical Sciences (IMSc), Chennai.</p> 
+<p> I am currently a postdoctoral researcher in the School of Computing Science at the University of Glasgow, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by Kitty Meeks. Before moving to Glasgow, I was a postdoc at the Chennai Mathematical Institute, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at The Institute of Mathematical Sciences (IMSc), Chennai.</p> 
 
   </article>
 
