--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <td class="announcement">
 
             Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems <br>
-            with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh <br>
-            STACS 2022
+            &nbsp &nbsp &nbsp &nbsp with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh <br>
+            &nbsp &nbsp &nbsp &nbsp STACS 2022
         
 
 
