--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
 <ul>
   <li> Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems
-          <ul> <li> with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh <\li>
+          &nbsp <ul> <li> with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh </li>
                <li> STACS 2022 </li>
           </ul>
     
