--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 <ul>
   <li> Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems
           <ul> 
-            <li margin-left: 1em> with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh </li>
-            <li> STACS 2022 </li>
+            <li class="margin"> with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh </li>
+            <li class="margin"> STACS 2022 </li>
           </ul>
     
   </li>
