--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
   
   <li> On the Complexity of Singly Connected Vertex Deletion
         <ul>
-          <li> with Avinandan Das, Lawqueen Kanesh, Komal Muluk, Nidhi Purohit and Saket Saurabh </li>
-          <li> Theoretical Computer Science, 2022 </li>
-          <li> IWOCA 2020 </li>
+          <li class="margin"> with Avinandan Das, Lawqueen Kanesh, Komal Muluk, Nidhi Purohit and Saket Saurabh </li>
+          <li class="margin"> Theoretical Computer Science, 2022 </li>
+          <li class="margin"> IWOCA 2020 </li>
         </ul>
   </li>
 </ul>  
