--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
           </ul>
     
   </li>
+ 
+  
+  <li> A Polynomial Kernel for Bipartite Permutation Vertex Deletion.
+        <ul>
+          <li class="margin"> with 	Jan Derbisz, Lawqueen Kanesh, Jayakrishnan Madathil, Abhishek Sahu, Saket Saurabh and Shaily Verma </li>
+          <li class="margin"> Algorithmica, 2022 </li>
+          <li class="margin"> IPEC 2021 </li>
+        </ul>
+  </li>
+  
+  <li> Odd Cycle Transversal in Mixed Graphs
+        <ul>
+          <li class="margin"> with Avinandan Das, Lawqueen Kanesh and Saket Saurabh </li>
+          <li class="margin"> WG 2021 </li>
+        </ul>
+  </li>
   
   <li> On the Complexity of Singly Connected Vertex Deletion
         <ul>
@@ -104,6 +120,7 @@
           <li class="margin"> IWOCA 2020 </li>
         </ul>
   </li>
+  
 </ul>  
       
   
