--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
   <h2>News</h2>
   
 <ul>
-  <li>Extended abstract in AAMAS 2023: The Complexity of Minimizing Envy in House Allocation <br> &nbsp &nbsp with Neeldhara Misra and Aditi Sethia</li>
+  <li>Extended abstract in AAMAS 2023: The Complexity of Minimizing Envy in House Allocation  
+        <ul> 
+            <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
+  </li>
 </ul>
    
    
@@ -100,7 +103,7 @@
   
   <li> A Polynomial Kernel for Bipartite Permutation Vertex Deletion.
         <ul>
-          <li class="margin"> with 	Jan Derbisz, Lawqueen Kanesh, Jayakrishnan Madathil, Abhishek Sahu, Saket Saurabh and Shaily Verma </li>
+          <li class="margin"> with Jan Derbisz, Lawqueen Kanesh, Abhishek Sahu, Saket Saurabh and Shaily Verma </li>
           <li class="margin"> Algorithmica, 2022 </li>
           <li class="margin"> IPEC 2021 </li>
         </ul>
