--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>Jayakrishnan Madathil</title>
-  <meta name="description" content="">
-
+  <meta name="description" content="Jayakrishnan Madathil academic profile.">
+        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna, imsc, IMSc, matscience, CMI, cmi, glasgow, parameterized, fixed parameter tractable, graph, algorithms, FPT, kernelization, fair division, comsoc, econCS, Saket Saurabh, saket">
+    
   <link rel="shortcut icon" href="assets/img/favicon.ico">
    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -195,7 +196,11 @@
         </ul>
   </li>
  </ul> 
-     
+ 
+ <div class="news" id="contact">
+  <h2>Contact</h2>
+   You can reach me via email: <a href="mailto:jayakrishnan.madathil@glasgow.ac.uk">firstname [dot] lastname [at] glasgow [dot] ac [dot] uk</a>
+  
    <!--
   <div class="news" id="publications">
   <h2>Publications</h2>
