--- a/index.html
+++ b/index.html
@@ -197,41 +197,10 @@
   </li>
  </ul> 
  
- <div class="news" id="contact">
+ <div class="news" id="social">
   <h2>Contact</h2>
    You can reach me via email: <a href="mailto:jayakrishnan.madathil@glasgow.ac.uk">firstname [dot] lastname [at] glasgow [dot] ac [dot] uk</a>
   
-   <!--
-  <div class="news" id="publications">
-  <h2>Publications</h2>
-      Also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
-    <table>
-
-        <tr>
-        <td class="date">2022</td>
-        <td class="announcement">
-
-            Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems <br>
-            &nbsp &nbsp with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh <br>
-            &nbsp &nbsp STACS 2022
- 
-        </td>
-      </tr>
-      
-      <tr>
-        <td class="date">2022</td>
-        <td class="announcement">
-
-            On the Complexity of Singly Connected Vertex Deletion <br>
-            &nbsp &nbsp with Avinandan Das, Lawqueen Kanesh, Komal Muluk, Nidhi Purohit and Saket Saurabh <br>
-            &nbsp &nbsp Theoretical Computer Science <br>
-            &nbsp &nbsp IWOCA 2020
- 
-        </td>
-      </tr>
-      
-    </table>
--->
 <!--        <p></p>
     <h4>Seminar Talks</h4>
         <p></p> -->
