--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- <a class="page-link" href="#talks">Talks</a> -->
 
-        <a class="page-link" href="#social">Contact</a>
+        <a class="page-link" href="#contact">Contact</a>
 
 
       </div>
@@ -197,7 +197,7 @@
   </li>
  </ul> 
  
- <div class="news" id="social">
+ <div class="news" id="contact">
   <h2>Contact</h2>
    You can reach me via email: <a href="mailto:jayakrishnan.madathil@glasgow.ac.uk">firstname [dot] lastname [at] glasgow [dot] ac [dot] uk</a>
   
