--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 
 <p align = "justify">I am a theoretical computer scientist. I work primarily in algorithm design. My research interests include parameterized algorithms, kernelization, approximate counting etc. Recently, I have strated working on problems at the intersection of economics and computation.</p>
   
-<p align = "justify"> I am currently a postdoctoral researcher in the School of Computing Science at the University of Glasgow, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by Kitty Meeks. Before moving to Glasgow, I was a postdoc at the Chennai Mathematical Institute, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at The Institute of Mathematical Sciences (IMSc), Chennai.</p> 
+<p align = "justify"> I am currently a postdoctoral researcher in the <a href="https://www.gla.ac.uk/schools/computing/" target="\_blank">School of Computing Science</a> at the <a href="https://www.gla.ac.uk" target="\_blank">University of Glasgow</a>, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by <a href="https://www.dcs.gla.ac.uk/~kitty/" target="\_blank">Kitty Meeks</a>. Before moving to Glasgow, I was a postdoc at the <a href="https://www.cmi.ac.in" target="\_blank">Chennai Mathematical Institute</a>, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at <a href="https://www.imsc.res.in" target="\_blank">The Institute of Mathematical Sciences (IMSc)</a>, Chennai.</p> 
 
   </article>
 
  <div class="news" id="news">
-  <h2>News</h2>
+  <h2>News and Updates</h2>
   
 <ul>
-  <li>Extended abstract in AAMAS 2023: The Complexity of Minimizing Envy in House Allocation  
+  <li>Extended abstract accepted to AAMAS 2023: The Complexity of Minimizing Envy in House Allocation  
         <ul> 
             <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
         </ul>
