--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <ul>
           <li class="margin"> with Saket Saurabh and Meirav Zehavi</li>
           <li class="margin"> CSR 2018 (Best Paper Award) </li>
-          <li class="margin"> Theory of Computing Systems (TOCS), 2020 (retitled: Fixed-Parameter Tractable Algorithm and Polynomial Kernel for Max-Cut Above Spanning Tree) </li>
+          <li class="margin"> Theory of Computing Systems, 2020 (retitled: Fixed-Parameter Tractable Algorithm and Polynomial Kernel for Max-Cut Above Spanning Tree) </li>
         </ul>
   </li>
  </ul> 
