--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="trigger">
         <!-- About -->
-        <a class="page-link" href="about" color="black">About</a>
+        <a class="page-link" href="about" style="color: black">About</a>
         
         <a class="page-link" href="#news">News</a>
         
