--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
       <div class="trigger">
         <!-- About -->
-        <a class="page-link" href="about" style="color: black">About</a>
+        <a class="page-link" href="" style="color: black">About</a>
         
-        <a class="page-link" href="#news">News</a>
+        <a class="page-link" href="#news" style="color: black">News</a>
         
-        <a class="page-link" href="#publications">Publications</a>
+        <a class="page-link" href="#publications" style="color: black">Publications</a>
 
         <!-- <a class="page-link" href="#talks">Talks</a> -->
 
-        <a class="page-link" href="#contact">Contact</a>
+        <a class="page-link" href="#contact" style="color: black">Contact</a>
 
 
       </div>
@@ -71,7 +71,7 @@
   </div>
 
 
- <div class="news" id="about"> 
+
 <p align = "justify"> I am a postdoctoral research associate in the <a href="https://www.gla.ac.uk/schools/computing/" target="\_blank">School of Computing Science</a> at the <a href="https://www.gla.ac.uk" target="\_blank">University of Glasgow</a>, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by <a href="https://www.dcs.gla.ac.uk/~kitty/" target="\_blank">Kitty Meeks</a>. Before moving to Glasgow, I was a postdoc at the <a href="https://www.cmi.ac.in" target="\_blank">Chennai Mathematical Institute</a>, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at <a href="https://www.imsc.res.in" target="\_blank">The Institute of Mathematical Sciences (IMSc)</a>, Chennai.</p> 
 
 <p align = "justify">I work primarily in algorithm design. My research interests, in no particular order, include parameterized algorithms, kernelization, parameterized counting, computational social choice theory etc.</p>
