--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
  
  <div class="news" id="contact">
   <h2>Contact</h2>
-   <p>You can reach me via email: <a href="mailto:jayakrishnan.madathil@glasgow.ac.uk">firstname [dot] lastname [at] glasgow [dot] ac [dot] uk</a></p>
+   <p>You can reach me via email: firstname [dot] lastname [at] glasgow [dot] ac [dot] uk</p>
   
 <!--        <p></p>
     <h4>Seminar Talks</h4>
