--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <title>Jayakrishnan Madathil</title>
-  <meta name="description" content="Jayakrishnan Madathil academic profile.">
+    <meta name="google-site-verification" content="BxD72hXukDXHpe26mRaW5Z1xRJQ7WQz-0r2vfhuO9E4" />
+  <meta name="description" content="Jayakrishnan Madathil's academic profile.">
         <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna, imsc, IMSc, matscience, CMI, cmi, glasgow, parameterized, fixed parameter tractable, graph, algorithms, FPT, kernelization, fair division, comsoc, econCS, Saket Saurabh, saket">
     
   <link rel="shortcut icon" href="assets/img/favicon.ico">
