--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Jayakrishnan Madathil</title>
     <meta name="google-site-verification" content="BxD72hXukDXHpe26mRaW5Z1xRJQ7WQz-0r2vfhuO9E4" />
   <meta name="description" content="Jayakrishnan Madathil's academic profile.">
-        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna, imsc, IMSc, matscience, CMI, cmi, glasgow, parameterized, fixed parameter tractable, graph, algorithms, FPT, kernelization, fair division, comsoc, econCS, Saket Saurabh, saket">
+        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna, imsc, IMSc, matscience, CMI, cmi, glasgow, parameterized, parameterised, complexity, fixed parameter tractable, graph, algorithm, FPT, kernelization, fair division, comsoc, econCS">
     
   <link rel="shortcut icon" href="assets/img/favicon.ico">
    <link rel="stylesheet" href="assets/css/main.css">
@@ -83,6 +83,10 @@
   <h2>News and Updates</h2>
   
 <ul>
+  <li>Serving as a thesis writing mentor during Jan-May 2023. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>  
+        
+   </li>
+  
   <li>Extended abstract accepted to AAMAS 2023: The Complexity of Minimizing Envy in House Allocation  
         <ul> 
             <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
