--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <title>Jayakrishnan Madathil</title>
     <meta name="google-site-verification" content="BxD72hXukDXHpe26mRaW5Z1xRJQ7WQz-0r2vfhuO9E4" />
-  <meta name="description" content="Jayakrishnan Madathil's academic profile.">
-        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna, imsc, IMSc, matscience, CMI, cmi, glasgow, parameterized, parameterised, complexity, fixed parameter tractable, graph, algorithm, FPT, kernelization, fair division, comsoc, econCS">
+  <meta name="description" content="Jayakrishnan Madathil's Academic Profile">
+        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna">
     
   <link rel="shortcut icon" href="assets/img/favicon.ico">
    <link rel="stylesheet" href="assets/css/main.css">
