--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Jayakrishnan Madathil</title>
     <meta name="google-site-verification" content="BxD72hXukDXHpe26mRaW5Z1xRJQ7WQz-0r2vfhuO9E4" />
   <meta name="description" content="Jayakrishnan Madathil's Academic Profile">
-        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, madhathil, jaykrishna, jayakrishna">
+        <meta name="keywords" content="jayakrishnan, madathil, jaykrishnan, jaykrishna, madhathil, jaykrishna madathil, jayakrishna madathil">
     
   <link rel="shortcut icon" href="assets/img/favicon.ico">
    <link rel="stylesheet" href="assets/css/main.css">
