--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
   <h2>News and Updates</h2>
   
 <ul>
-  <li>Serving as a thesis writing mentor during Jan-May 2023. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>  
-        
+   <li>Paper accepted to IJCAI 2023: Fair Division of a Graph into Compact Bundles (<a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a>).  
    </li>
+  
+  <li>Serving as a thesis writing mentor during Jan-May 2023. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
+  </li>
   
   <li>Extended abstract accepted to AAMAS 2023: The Complexity of Minimizing Envy in House Allocation  
         <ul> 
