--- a/index.html
+++ b/index.html
@@ -89,11 +89,7 @@
   <li>Serving as a thesis writing mentor during Jan-May 2023. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
   </li>
   
-  <li>Extended abstract accepted to AAMAS 2023: The Complexity of Minimizing Envy in House Allocation  
-        <ul> 
-            <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
-        </ul>
-   </li>
+  
 </ul>
    
    
@@ -101,6 +97,16 @@
   <h2>Publications</h2>
       Also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
 
+<h2 id="section-2023"></h2>
+<ul>
+<li> The Complexity of Minimizing Envy in House Allocation (Extended Abstract) 
+        <ul> 
+            <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
+            <li class="margin"> AAMAS 2023 </li>
+        </ul>
+   </li>
+ </ul>
+ <br>    
 <h2 id="section-2022"></h2>
 <ul>
   <li> Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems
