--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <h2>News and Updates</h2>
   
 <ul>
-   <li>Paper accepted to IJCAI 2023: Fair Division of a Graph into Compact Bundles (<a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a>).  
+   <li>I gave a talk on "Fair Division of a Graph into Compact Bundles" at the Joint Glasgow-Edinburgh Algorithms Workshop, June 2023.   
    </li>
   
   <li>Serving as a thesis writing mentor during Jan-May 2023. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
@@ -99,6 +99,12 @@
 
 <h2 id="section-2023"></h2>
 <ul>
+<li> Fair Division of a Graph into Compact Bundles (<a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a>)
+        <ul> 
+            <li class="margin"> IJCAI 2023 </li>
+        </ul>
+   </li>
+  
 <li> The Complexity of Minimizing Envy in House Allocation (Extended Abstract) 
         <ul> 
             <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
