--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <p align = "justify"> I am a postdoctoral research associate in the <a href="https://www.gla.ac.uk/schools/computing/" target="\_blank">School of Computing Science</a> at the <a href="https://www.gla.ac.uk" target="\_blank">University of Glasgow</a>, where I am part of the <i> Beyond One Solution in Combinatorial Optimisation </i> project led by <a href="https://www.dcs.gla.ac.uk/~kitty/" target="\_blank">Kitty Meeks</a>. Before moving to Glasgow, I was a postdoc at the <a href="https://www.cmi.ac.in" target="\_blank">Chennai Mathematical Institute</a>, and briefly an Early Career Fellow at IIT Gandhinagar. I did my PhD at <a href="https://www.imsc.res.in" target="\_blank">The Institute of Mathematical Sciences (IMSc)</a>, Chennai.</p> 
 
-<p align = "justify">I am theoretical computer scientist, broadly interested in algorithms and complexity. I work primarily in <a href="https://en.wikipedia.org/wiki/Parameterized_complexity" target=\_blank''>parameterized complexity</a>. A part of my current work deals with designing parameterized algorithms for counting problems. I also have an interest in problems at the intersection of economics and computation, specifically, fair allocation problems, mechanism design etc.</p>
+<p align = "justify">I am a theoretical computer scientist, broadly interested in algorithms and complexity. I work primarily in <a href="https://en.wikipedia.org/wiki/Parameterized_complexity" target=\_blank''>parameterized complexity</a>. A part of my current work deals with designing parameterized algorithms for counting problems. I also have an interest in problems at the intersection of economics and computation, specifically, fair allocation problems, mechanism design etc.</p>
   </article>
           
 
