--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <ul> 
             <li class="margin"> IJCAI 2023 </li>
            <li class="margin"> <a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a> </li>
-          <li class="margin"> <a href="https://recorder-v3.slideslive.com/?share=84458&s=96dfe735-7e94-4a91-b3ac-c0f9badbfffd" target="\_blank">Talk</a> (10 minutes, external link, the link may work only in Google Chrome)</li>
+          <li class="margin"> <a href="https://recorder-v3.slideslive.com/?share=84458&s=96dfe735-7e94-4a91-b3ac-c0f9badbfffd" target="\_blank">Talk</a> (10 minute video. External link, which may work only in Google Chrome.)</li>
         </ul>
    </li>
   
