--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <h2 id="section-2023"></h2>
 <ul>
-<li> Fair Division of a Graph into Compact Bundles
+<li><details>Fair Division of a Graph into Compact Bundles</details>
         <ul> 
             <li class="margin"> IJCAI 2023 </li>
            <li class="margin"> <a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a> </li> 
