--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
       Also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
 
 <h2 id="section-2023"></h2>
-<p><details >
-      <summary><ul style="list-style-type:none;">Fair Division of a Graph into Compact Bundles 
+<ul style="list-style-type:none;"><details >
+      <summary>Fair Division of a Graph into Compact Bundles 
          <ul> 
             <li class="margin"> IJCAI 2023 </li>
            <li class="margin"> <a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a> </li> 
-        </ul></ul>
+        </ul>
       </summary>
       <a> 
       <blockquote><small><p align = "justify">
@@ -111,7 +111,7 @@
         <font color="grey">  
         Fair division of graphs typically deals with allocating the vertices of a graph to agents so that the allocation is fair and the subgraph induced by each agent's bundle is connected. Instead of connectivity, we introduce a new constraint---called compactness---on the agents' bundles, and design efficient algorithms for computing fair and compact allocations. The new constraint of compactness attempts to capture the requirement that the items received by each agent be close to one another. 
         </font> </a></small></blockquote>
-  </details></p> 
+  </details></ul> 
   
 <ul>
 <li>Fair Division of a Graph into Compact Bundles 
