--- a/index.html
+++ b/index.html
@@ -107,19 +107,13 @@
       </summary>
       <a> 
       <blockquote><small><p align = "justify">
-        
+        <img border="10" alt="figure" src="assets/img/compactness.png" width="100" height="150">
         <font color="grey">  
         Fair division of graphs typically deals with allocating the vertices of a graph to agents so that the allocation is fair and the subgraph induced by each agent's bundle is connected. Instead of connectivity, we introduce a new constraint---called compactness---on the agents' bundles, and design efficient algorithms for computing fair and compact allocations. The new constraint of compactness attempts to capture the requirement that the items received by each agent be close to one another. 
         </font> </a></small></blockquote>
   </details></ul> 
   
 <ul>
-<li>Fair Division of a Graph into Compact Bundles 
-        <ul> 
-            <li class="margin"> IJCAI 2023 </li>
-           <li class="margin"> <a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a> </li> 
-        </ul>
-   </li>
   
 <li> The Complexity of Minimizing Envy in House Allocation (Extended Abstract) 
         <ul> 
