--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </summary>
       <a> 
       <blockquote>
-        <img border="10" alt="figure" src="assets/img/compactness.png" class="center" width="220" height="150"></a>
+        <div id="center"><img border="10" alt="figure" src="assets/img/compactness.png" class="center" width="250" height="150"></a></div>
         <small><p align = "justify">
         <font color="grey"> 
          <br> 
