--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </ul>
    
    
-   <div class="news" id="publications">
+   <div class="publications" id="publications">
   <h2>Publications</h2>
       Also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
 
@@ -107,7 +107,7 @@
       </summary>
       <a> 
       <blockquote>
-        <div id="center"><img border="10" alt="figure" src="assets/img/compactness.png" class="center" width="250" height="150"></div>
+        <div align="center"><img border="10" alt="figure" src="assets/img/compactness.png" class="center" width="250" height="150"></a></div>
         <small><p align = "justify">
         <font color="grey"> 
          <br> 
