--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </ul>
    
    
-   <div class="publications" id="publications">
+   <div class="news" id="publications">
   <h2>Publications</h2>
       Also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
 
