--- a/index.html
+++ b/index.html
@@ -125,23 +125,16 @@
       </summary>
       <a> 
       <blockquote>
-        <div align="center"><img border="10" alt="figure" src="assets/img/house.png" class="center" width="250" height="150"></a></div>
+        <div align="center"><img border="10" alt="figure" src="assets/img/house.png" class="center" width="300" height="150"></a></div>
         <small><p align = "justify">
         <font color="grey"> 
          <br> 
-        Fair division of graphs typically deals with allocating the vertices of a graph to agents so that the allocation is fair and the subgraph induced by each agent's bundle is connected. Instead of connectivity, we introduce a new constraint---called compactness---on the agents' bundles, and design efficient algorithms for computing fair and compact allocations. The new constraint of compactness attempts to capture the requirement that the items received by each agent be close to one another. 
+        We study <em>almost-envy-freeness</em> in house allocation, where we have to allocate <span class="math inline">m</span> houses to <span class="math inline">n</span> agents so that each agent receives exactly one house. While we can check in polynomial time if an envy-free allocation exists, that is not the case with relaxations of envy-freeness. In addition, typical relaxations of envy-freeness such as envy-free up to some goods do not make sense for house allocation problems where every agent is required to receive exactly one house. Hence we <em>quantify</em> envy in an allocation using three different metrics---the number of envious agents, the maximum envy experienced by an agent and the total envy experienced by all the agents, and study the complexities of the corresponding computational problems where we are looking for an allocation that minimizes one of the three metrics. 
         </font> </a></small></blockquote>
   </details></ul> 
      
 <ul>
   
-<li> The Complexity of Minimizing Envy in House Allocation (Extended Abstract) 
-        <ul> 
-            <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
-            <li class="margin"> AAMAS 2023 </li>
-        </ul>
-   </li>
- </ul>
         
  <br>    
 <h2 id="section-2022"></h2>
