--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
       </summary>
       <a> 
       <blockquote>
-        <div align="center"><img border="10" alt="figure" src="assets/img/house.png" class="center" width="300" height="150"></a></div>
+        <div align="center"><img border="10" alt="figure" src="assets/img/house.png" class="center" width="300" height="120"></a></div>
         <small><p align = "justify">
         <font color="grey"> 
          <br> 
-        We study <em>almost-envy-freeness</em> in house allocation, where we have to allocate <span class="math inline">m</span> houses to <span class="math inline">n</span> agents so that each agent receives exactly one house. While we can check in polynomial time if an envy-free allocation exists, that is not the case with relaxations of envy-freeness. In addition, typical relaxations of envy-freeness such as envy-free up to some goods do not make sense for house allocation problems where every agent is required to receive exactly one house. Hence we <em>quantify</em> envy in an allocation using three different metrics---the number of envious agents, the maximum envy experienced by an agent and the total envy experienced by all the agents, and study the complexities of the corresponding computational problems where we are looking for an allocation that minimizes one of the three metrics. 
+        We study <em>almost-envy-freeness</em> in house allocation, where we have to allocate <span class="math inline">m</span> houses to <span class="math inline">n</span> agents so that each agent receives exactly one house. While we can check in polynomial time if an envy-free allocation exists, that is not the case with relaxations of envy-freeness. In addition, typical relaxations of envy-freeness such as envy-free up to some goods do not make sense for house allocation problems as every agent is required to receive exactly one house. Hence we <em>quantify</em> the envy caused by an allocation using three different metrics---the number of envious agents, the maximum envy experienced by an agent and the total envy experienced by all the agents, and study the complexities of the corresponding computational problems where we are looking for an allocation that minimizes one of the three metrics. 
         </font> </a></small></blockquote>
   </details></ul> 
      
