--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
    
    <div class="news" id="publications">
   <h2>Publications</h2>
-     Click on arrows to expand. A list of publications are also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
+     Click on arrows to expand. Also availabe at <a href="https://dblp.org/pid/219/8297.html" target="\_blank">dblp</a> and <a href="https://scholar.google.com/citations?user=5jSMmyUAAAAJ&hl=en"target="\_blank">Google Scholar.</a>
 
 <h2 id="section-2023"></h2>
      
