--- a/index.html
+++ b/index.html
@@ -135,6 +135,23 @@
      
  <br>    
 <h2 id="section-2022"></h2>
+
+ <ul style="list-style-type:none;"><details >
+      <summary>Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems 
+         <ul> 
+            <li class="margin"> with <a href="https://sites.google.com/view/lawqueenkanesh/home">Lawqueen Kanesh,</a> <a href="https://sites.google.com/view/sanjuktaroy">Sanjukta Roy,</a> <a href="https://sites.google.com/view/abhisheksahu1">Abhishek Sahu</a> and <a href="https://www.imsc.res.in/saket_saurabh">Saket Saurabh</a></li>
+            <li class="margin">  <a href="https://drops.dagstuhl.de/opus/volltexte/2022/15849/pdf/LIPIcs-STACS-2022-39.pdf" target="\_blank"> STACS 2022 </a></li>
+        </ul>
+      </summary>
+      <a> 
+      <blockquote>
+        <div align="center"><img border="10" alt="figure" src="assets/img/closed.png" class="center" width="300" height="120"></a></div>
+        <small><p align = "justify">
+        <font color="grey"> 
+         <br> 
+       Inspired by the triadic closure property exhibited by social networks, Fox, Roughgarden, Seshadhri, Wei and Wein introduced the class of <span class="math inline">c</span>-closed graphs as a distribution-free model of networks [ICALP 2018 and SICOMP 2020]. A grapg <span class="math inline">G</span> is <span class="math inline">c</span>-closed if any two distinct vertices with at least <span class="math inline">c</span> common neighbours are adjacent to each other. Koana, Komusiewicz and Frank Sommer showed that several W-hard problems, including Independent Set and Dominating Set, admit FPT algorithms and polynomial kernels on graphs of bounded closure [ESA 2020 and SIDMA 2022]. Following this work, we study the parameterized complexity of domination problems on the graphs of bounded closure. 
+        </font> </a></small></blockquote>
+  </details></ul>     
      
 <ul>
   <li> Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems
