--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 <ul style="list-style-type:none;"><details >
       <summary>The Complexity of Minimizing Envy in House Allocation (Extended Abstract) 
          <ul> 
-            <li class="margin"> with <a href="https://www.neeldhara.com" target="\_blank"> Neeldhara Misra </a> and Aditi Sethia </li>
-            <li class="margin">  <a href="https://dl.acm.org/doi/10.5555/3545946.3599039" target="\_blank"> AAMAS 2023 </a></li>
+            <li class="margin"> with Neeldhara Misra and Aditi Sethia </li>
+            <li class="margin"> AAMAS 2023 </a></li>
         </ul>
       </summary>
       <a> 
@@ -139,13 +139,13 @@
  <ul style="list-style-type:none;"><details >
       <summary>Further Exploiting c-Closure for FPT Algorithms and Kernels for Domination Problems 
          <ul> 
-            <li class="margin"> with <a href="https://sites.google.com/view/lawqueenkanesh/home">Lawqueen Kanesh,</a> <a href="https://sites.google.com/view/sanjuktaroy">Sanjukta Roy,</a> <a href="https://sites.google.com/view/abhisheksahu1">Abhishek Sahu</a> and <a href="https://www.imsc.res.in/saket_saurabh">Saket Saurabh</a></li>
-            <li class="margin">  <a href="https://drops.dagstuhl.de/opus/volltexte/2022/15849/pdf/LIPIcs-STACS-2022-39.pdf" target="\_blank"> STACS 2022 </a></li>
+            <li class="margin"> with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh</li>
+            <li class="margin"> STACS 2022</li>
         </ul>
       </summary>
       <a> 
       <blockquote>
-        <div align="center"><img border="10" alt="figure" src="assets/img/closed.png" class="center" width="350" height="120"></a></div>
+        <div align="center"><img border="10" alt="figure" src="assets/img/closed.png" class="center" width="250" height="100"></a></div>
         <small><p align = "justify">
         <font color="grey"> 
          <br> 
