--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <ul style="list-style-type:none;"><details >
       <summary>Fair Division of a Graph into Compact Bundles 
          <ul> 
-            <li class="margin"> <a href="https://doi.org/10.24963/ijcai.2023/316" target="\_blank">IJCAI 2023</a> </li>
+            <li class="margin">IJCAI 2023 </li>
            <li class="margin"> <a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a> </li> 
         </ul>
       </summary>
