--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
       <a> 
       <blockquote>
         <div align="center"><img border="10" alt="figure" src="assets/img/house.png" class="center" width="300" height="120"></a></div>
-        <small><p align = "justify">
+        <p align = "justify">
         <font color="grey"> 
          <br> 
         We study <em>almost-envy-freeness</em> in house allocation, where we have to allocate <span class="math inline">m</span> houses to <span class="math inline">n</span> agents so that each agent receives exactly one house. While we can check in polynomial time if an envy-free allocation exists, an envy-free allocation need not always exist, which prompts the question whether relaxations of envy-freeness can be achieved. But typical relaxations of envy-freeness such as envy-free up to some goods do not make sense for house allocation problems as every agent is required to receive exactly one house. Hence we <em>quantify</em> the envy caused by an allocation using three different metrics---the number of envious agents, the maximum envy experienced by an agent and the total envy experienced by all the agents, and study the complexities of the corresponding computational problems where we are looking for an allocation that minimizes one of the three metrics. 
-        </font> </a></small></blockquote>
+        </font> </a></blockquote>
   </details></ul> 
      
  <br>    
@@ -146,11 +146,11 @@
       <a> 
       <blockquote>
         <div align="center"><img border="10" alt="figure" src="assets/img/closed.png" class="center" width="250" height="100"></a></div>
-        <small><p align = "justify">
+        <p align = "justify">
         <font color="grey"> 
          <br> 
        Inspired by the triadic closure property exhibited by social networks, Fox, Roughgarden, Seshadhri, Wei and Wein introduced the class of <span class="math inline">c</span>-closed graphs as a deterministic model of social networks [ICALP 2018 and SICOMP 2020]. A graph <span class="math inline">G</span> is <span class="math inline">c</span>-closed if any two distinct vertices with at least <span class="math inline">c</span> common neighbours are adjacent to each other. Koana, Komusiewicz and Frank Sommer showed that several W-hard problems, including Independent Set and Dominating Set, admit FPT algorithms and polynomial kernels on graphs of bounded closure [ESA 2020 and SIDMA 2022]. Following this work, we study the parameterized complexity of domination problems such as Perfect Code (dominate every vertex exactly once), Connected Dominating Set (dominating set that induces a connected subgraph) and Partial Dominating Set (dominate at least a given number of vertices) on graphs of bounded closure. 
-        </font> </a></small></blockquote>
+        </font> </a></blockquote>
   </details></ul>     
      
 
