--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
          <ul> 
             <li class="margin"> with Lawqueen Kanesh, Sanjukta Roy, Abhishek Sahu and Saket Saurabh</li>
             <li class="margin"> STACS 2022</li>
+            <li class="margin"> SIDMA 2023</li>
         </ul>
       </summary>
       <a> 
