--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
          <ul> 
             <li class="margin">IJCAI 2023 </li>
            <li class="margin"> <a href="https://arxiv.org/abs/2305.06864" target="\_blank">arXiv</a> </li> 
+           <li class="margin"> <a href="https://ijcai-23.org/video/?vid=39005417" target="\_blank">Talk</a> (10 min video, external link)</li>
         </ul>
       </summary>
       <a> 
