--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
   <h2>News and Updates</h2>
   
 <ul>
+  <li> Extended abstract accepted to AAMAS 2024: Opinion Diffusion on Society Graphs Based on Approval Ballots
+        <ul>
+          <li class="margin"> with Neeldhara Misra and Yash More </li>
+        </ul>
+  </li>
+  
    <li>I gave a talk on "Fair Division of a Graph into Compact Bundles" at the Joint Glasgow-Edinburgh Algorithms Workshop, June 2023.   
    </li>
   
