--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
   <h2>News and Updates</h2>
   
 <ul>
+  <li> New Pre-print: Parameterized Algorithms for Balanced Cluster Edge Modification Problems
+        <ul>
+          <li class="margin"> with Kitty Meeks </li>
+          <li class="margin"> <a href="https://arxiv.org/abs/2403.03830" target="\_blank">arXiv</a> </li>
+        </ul>
+  </li>
+  
+  <li>Serving as a thesis writing mentor during Feb-June 2024. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
+  </li>
+  
   <li> Extended abstract accepted to AAMAS 2024: Opinion Diffusion on Society Graphs Based on Approval Ballots
         <ul>
           <li class="margin"> with Neeldhara Misra and Yash More </li>
@@ -92,8 +102,6 @@
    <li>I gave a talk on "Fair Division of a Graph into Compact Bundles" at the Joint Glasgow-Edinburgh Algorithms Workshop, June 2023.   
    </li>
   
-  <li>Serving as a thesis writing mentor during Jan-May 2023. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
-  </li>
   
   
 </ul>
