--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
             <li class="margin">AAMAS 2024 </li>
         </ul>
       </summary>
-      <a> 
+       
       <blockquote>
         <p align = "justify">
         <font color="grey"> 
          <br> 
         Imagine an election: there are voters and candidates, and different subsets of voters may like different subsets of candidates. But during the course of the campaign, voters may be influenced by their peers, and change their opinions about the candidates. Could this shift in opinions result in a particular candidate's victory or defeat?
-        </font> </a></blockquote>
+        </font> </blockquote>
   </details></ul> 
 
 <br>     
