--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
   <h2>News and Updates</h2>
   
 <ul>
+  <li> Paper accepted to AAAI 2025. Temporal Triadic Closure: Finding Dense Substructures in Social Networks That Evolve Over Time
+        <ul>
+          <li class="margin"> with Tom Davot, Jessica Enright and Kitty Meeks </li>
+          <li class="margin"> <a href="https://arxiv.org/abs/2412.09567" target="\_blank">arXiv</a> </li>
+        </ul>
+  </li>
+  
+  <li>Serving as a thesis writing mentor during July-Nov 2024. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
+  </li>
+  
   <li> New Pre-print: Parameterized Algorithms for Balanced Cluster Edge Modification Problems
         <ul>
           <li class="margin"> with Kitty Meeks </li>
@@ -90,8 +100,7 @@
         </ul>
   </li>
   
-  <li>Serving as a thesis writing mentor during Feb-June 2024. You can read about University of Glasgow's thesis mentoring programme <a href="https://sway.office.com/0T8LpE7lJ6yZ8Hl5" target="\_blank">here.</a>         
-  </li>
+  
   
    <li>I gave a talk on "Fair Division of a Graph into Compact Bundles" at the Joint Glasgow-Edinburgh Algorithms Workshop, June 2023.   
    </li>
