--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
  
  <div class="news" id="contact">
   <h2>Contact</h2>
-   <p>You can reach me via email: firstname [dot] lastname [at] glasgow [dot] ac [dot] uk</p>
+   <p>You can reach me via email: jkmadathil [at] iitpkd [dot] ac [dot] in</p>
   
     </div>
   
